# opencv_demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CMakeModules/: CPackFixupBundle.cmake.in  deps.cmake  macros.cmake  project_props.cmake
Slides/: index.html
Slides/css/: fonts.css  print.css  styles.css
Slides/js/: slides.js
basic_operations/: CMakeLists.txt
basic_operations/binarization/: CMakeLists.txt  main.cpp
basic_operations/conversions/: CMakeLists.txt  main.cpp
basic_operations/dilation/: CMakeLists.txt  main.cpp
basic_operations/erosion/: CMakeLists.txt  main.cpp
basic_operations/smoothing/: CMakeLists.txt  main.cpp
deploy_all/: CMakeLists.txt
feature_extraction/: CMakeLists.txt
feature_extraction/BRISK/: CMakeLists.txt  main.cpp
feature_extraction/HSV/: CMakeLists  main.cpp
feature_extraction/ORB/: CMakeLists.txt  main.cpp
feature_extraction/SIFT/: CMakeLists.txt  main.cpp
feature_extraction/SURF/: CMakeLists.txt  main.cpp
image_processing/: CMakeLists.txt
image_processing/canny_edge/: CMakeLists.txt  main.cpp
image_processing/gradients/: CMakeLists.txt  main.cpp
image_processing/histograms/: CMakeLists.txt  main.cpp
image_processing/watershed/: CMakeLists.txt  main.cpp
object_detection/: CMakeLists.txt
object_detection/face_detection/: CMakeLists.txt  main.cpp
object_detection/template_matching/: CMakeLists.txt  main.cpp
